[package]
name = "console_static_text"
version = "0.4.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
keywords = ["console"]
license = "MIT"
repository = "https://github.com/dsherret/console_static_text"
description = "Logging for text that should stay in the same place in a console."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.10"
vte = "0.11.0"

[dev-dependencies]
console = "0.15.2"
pretty_assertions = "1.3"
