[package]
name = "console_static_text"
version = "0.5.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
keywords = ["console"]
license = "MIT"
repository = "https://github.com/dsherret/console_static_text"
description = "Logging for text that should stay in the same place in a console."

[features]
sized = ["terminal_size", "rustix", "windows-sys"]

[dependencies]
terminal_size = { version = "0.2.3", optional = true }
unicode-width = "0.1.10"
vte = "0.11.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.36.3", features = ["termios"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Console"], optional = true }

[dev-dependencies]
console = "0.15.2"
pretty_assertions = "1.3"
